Fix for birthday input focus issue on small viewports.

--- a/src/css/pwag.css
+++ b/src/css/pwag.css
@@ -67,6 +67,7 @@ body.pwag-gate-enabled {
 }
 .pwag-birthday-groups__inner {
 	position: absolute;
+	z-index: 2;
 	height: 300px;
 	width: 2000px; /* Set large width to prevent wrapping on some mobiles */
 	-webkit-transition: left 450ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -161,19 +162,25 @@ body.pwag-gate-enabled {
 }
 .pwag-feedback {
 	position: absolute;
+	z-index: 1;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
 	color: #fff;
-}
-.pwag-feedback__message {
 	opacity: 0;
 	-webkit-transition: opacity 0.15s ease-in-out;
 	-moz-transition: 	opacity 0.15s ease-in-out;
 	-o-transition : 	opacity 0.15s ease-in-out;
 	transition: 		opacity 0.15s ease-in-out;
 }
+.pwag-feedback.pwag-show {
+	opacity: 1;
+}
+.pwag-feedback__message {
+	display: none;
+}
 .pwag-feedback__message.pwag-show {
+	display: block;
 	opacity: 1;
 }
 .pwag-ie8-true .pwag-feedback__message {
